# Changelog
# $Id$
nn-nn-13 - Version 5.1.24

02-04-13 - Version 5.1.23

  - Fix for Bug#35653, executeQuery() in Statement.java let "TRUNCATE" queries being executed. "TRUNCATE" and "RENAME" are now filtered for executeQuery().

  - Fix for Bug#65909, referenceThread causes memory leak in Tomcat.
    Abandoned connection cleanup thread was refactored to have static shutdown method.
    If you encountered this leak problem, your application should implement context listener with
    AbandonedConnectionCleanupThread.shutdown() call in contextDestroyed method.

    For example:
       @WebListener
       public class YourThreadsListener implements ServletContextListener {
          public void contextDestroyed(ServletContextEvent arg0) {
             try {
                 AbandonedConnectionCleanupThread.shutdown();
             } catch (InterruptedException e) {
             }
          }
          ...
       }

    Note that if container does not support annotations you should add description to web.xml:
       <listener>
          <listener-class>user.package.YourThreadsListener</listener-class>
       </listener>

  - Added tests for explicit partition selection syntax introduced in 5.6GA.

  - Added support of password expiration protocol. This introduces new boolean connection property disconnectOnExpiredPasswords.
    If disconnectOnExpiredPasswords = true and password expired then connection will be rejected by server with ErrorCode == 1820 (ER_MUST_CHANGE_PASSWORD).
    If disconnectOnExpiredPasswords = false then connection will enter to "sandbox" mode,
    all commands except SET PASSWORD = ... and SET PASSWORD FOR CURRRENT_USER() = ... will cause an error to be thrown.

  - Added tests for EXCHANGE PARTITION syntax introduced in 5.6GA.

  - Added tests for transportable tablespaces syntax introduced in 5.6GA.

  - Added tests for CREATE TABLE syntax changed in 5.6GA: CREATE TABLE ... DATA DIRECTORY = 'absolute/path/to/directory/'
